# columnflow

./: .all-contributorsrc  .flake8  .gitattributes  .gitignore  .gitmodules  .markdownlint  .move_software.sh  .readthedocs.yaml  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  codecov.yml  create_analysis.sh  create_new_analysis.sh  law.cfg  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_prod.txt  setup.py  setup.sh
.github/actions/build_docker/: action.yaml
.github/actions/file_manager/: action.yaml
.github/actions/setup_software/: action.yaml
.github/workflows/: action.yaml  build_all_images.yaml  build_and_test.yaml  build_and_test_single.yaml  build_docker_container.yaml  build_docs.yaml  gh_pages.yaml  lint_and_test.yaml  publish_pypi.yaml  setup_base_software.yaml  setup_basic_software.yaml  setup_venvs.yaml  test_docker.yaml  test_sequence.yaml
analysis_template/: .flake8  .gitmodules  README.md  custom_law.cfg  law.cfg  setup.sh
analysis_template/cms_minimal/: .flake8  README.md
analysis_template/cms_minimal/sandboxes/: example.sh
analysis_template/default/: .gitignore  law.cfg  setup.sh
analysis_template/default/__cf_module_name__/: columnflow_patches.py
analysis_template/default/sandboxes/: example.txt
analysis_template/default/tests/: run_linting
analysis_template/plhld/calibration/: default.py  jet.py
analysis_template/sandboxes/: venv_ml_tf.sh  venv_ml_tf_dev.sh
analysis_template/tests/: __init__.py  run_all  run_linting
analysis_templates/cms_minimal/: .gitignore  README.md  law.cfg  setup.sh
analysis_templates/ghent_template/: .gitignore  README.md  law.cfg  setup.sh
ap/: __init__.py  __version__.py  columnar_util.py  order_util.py  util.py
ap/calibration/: __init__.py  jec.py  jets.py  seeds.py  test.py
ap/config/: analysis_st.py  campaign_2018.py  categories.py  constants.py  functions.py  jec_sources.yaml  processes.py  variables.py
ap/inference/: __init__.py  datacard.py  test.py
ap/ml/: __init__.py  test.py
ap/plotting/: plotter.py  variables.py
ap/production/: __init__.py  categories.py  features.py  gen_top_decay.py  normalization.py  pileup.py  processes.py  seeds.py  test.py  weights.py
ap/scripts/: hello_world.py
ap/selection/: __init__.py  test.py
ap/tasks/: __init__.py  applySelection.py  calibration.py  cutflow.py  defineObjects.py  defineSelection.py  defineSelections.py  external.py  fillHistograms.py  histograms.py  inference.py  mergeHistograms.py  ml.py  objectDefinition.py  plotShiftograms.py  plotting.py  production.py  reduction.py  selectEvents.py  selection.py  test_plotting.py
columnflow/: __init__.py  __version__.py  cms_util.py  columnar_util.py  columnar_util_Ghent.py  config_util.py  hist_util.py  timing.py  types.py  util.py  util_Ghent.py
columnflow/binning/: __init__.py
columnflow/calibration/: __init__.py  base.py  example.py  jets.py  jets_coffea.py  met.py  test.py  util.py
columnflow/categorization/: __init__.py
columnflow/config/: analysis_st.py  campaign_2018.py  constants.py  processes.py  variables.py
columnflow/example_config/: analysis_st.py  campaign_2018.py
columnflow/histograming/: __init__.py  default.py
columnflow/histogramming/: __init__.py  default.py  shifts.py
columnflow/inference/: __init__.py  datacard.py  example.py  test.py
columnflow/ml/: __init__.py  example.py  test.py
columnflow/plotting/: __init__.py  example.py  plot2d.py  plot_all.py  plot_functions_1d.py  plot_functions_2d.py  plot_ml_evaluation.py  plot_util.py  plotter.py  variables.py
columnflow/production/: __init__.py  btag.py  categories.py  electron.py  example.py  features.py  gen_top_decay.py  matching.py  mc_weight.py  muon.py  normalization.py  pdf.py  pileup.py  processes.py  scale.py  seeds.py  util.py  veto.py  weights.py
columnflow/reduction/: __init__.py  default.py  util.py
columnflow/selection/: __init__.py  empty.py  example.py  matching.py  stats.py  test.py  util.py
columnflow/tasks/: binning.py  calibration.py  coalesce.py  cutflow.py  external.py  histograms.py  inference.py  inspection.py  ml.py  plotting.py  production.py  reduction.py  selection.py  union.py  yields.py
columnflow/weight/: __init__.py  all_weights.py  empty.py  example.py
docs/: Makefile  build_simple_rst_docs.py  conf.py  index.rst  law.cfg  law_docs.cfg  practices.md  requirements.txt  requirements_docs.txt  start.rst
docs/_extensions/: pydomain_patch.py
docs/_static/: styles_sphinx_book_theme.css  styles_sphinx_rtd_theme.css
docs/api/: columnar_util.rst  config_util.rst  index.rst  types.rst  util.rst
docs/gh_pages/: index.html
docs/task_overview/: index.rst  introduction.md  plotting.md  plotting.rst  plotting_tasks.md
docs/user_guide/: 02_03_transition.md  best_practices.md  cms_specializations.md  debugging.md  examples.md  getting-started.md  index.rst  law.md  ml.md  ml_code.py  plotting.md  sandbox.md  shifts.md  special_usecases.md  structure.md  task_array_functions.md
sandboxes/: _setup_cmssw.sh  _setup_venv.sh  ap_dev.sh  ap_prod.sh  cf.sh  cf.txt  cf_dev.sh  cf_prod.sh  cmssw_columnar.sh  cmssw_default.sh  columnar.txt  columnar2.txt  dev.txt  environment_linux-64_py3.7.yaml  environment_linux-64_py3.8.yaml  environment_linux-64_py3.9.yaml  ml_tf.txt  selection.txt  selection_dev.txt  venv_columnar.sh  venv_columnar2.sh  venv_columnar2_dev.sh  venv_columnar_dev.sh  venv_docs_dev.sh  venv_lepton_mva.sh  venv_lepton_mva.txt  venv_lepton_mva_dev.sh  venv_ml_tf.sh  venv_ml_tf_dev.sh  venv_selection.sh  venv_selection_dev.sh  venv_selection_eff.sh  venv_selection_eff.txt  venv_selection_eff_dev.sh
tests/: __init__.py  run_all  run_coverage  run_docs  run_linting  run_test  run_tests  test_SelectionResults.py  test_base_tasks.py  test_calibrator.py  test_columnar_util.py  test_config_util.py  test_hist_util.py  test_inference.py  test_plotting.py  test_producers.py  test_selectionresults.py  test_task_parameters.py  test_util.py
tests/data/: test_prod_sceta.json
(+272 files in other folders)
